--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "symfony/dependency-injection": "^7.1"
+        "symfony/dependency-injection": "^7.1",
+        "symfony/config": "^7.1"
     }
 }
