--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "Arknet\\LineReracer\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
+    "version": "1.0.0",
     "require": {
         "psr/container": "^2.0"
     }
